2004-12-16  Stepan Kasal  <kasal@ucw.cz>

	Cosmetic changes, mostly imported from gawk:

	* src/dfa.c (lexstart): Removed unused variable.
	(parse_bracket_exp_mb): Don't initialize different pointers in one
	  assignment
	(lex): Don't initialize automatic arrays, it's invalid in pre-C89
	  compilers.
	Various other typos.
	* src/dfa.h, src/grep.c, src/search.c: Typos.

2004-12-16  Isamu Hasegawa  <isamuh@jp.ibm.com>

	From http://oss.software.ibm.com/linux/patches/?patch_id=25

	* src/search.c: Patch for i18n correctness.
	* src/grep.c: Likewise.
	* src/dfa.c: Likewise.
	* lib/regex.c: Likewise.

2004-12-15  Julian Foad  <julianfoad@btopenworld.com>

	Changes to documentation and help text, mostly from Stepan Kasal.

	* doc/grep.texi: Minor fixes of phrasing.
	* doc/grep.1: Likewise.
	* src/grep.c: Likewise.

2004-12-01  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (usage): Use ``FILE_PATTERN'' for --include and --exclude,
	  change ``only print'' to ``print only''.
	* doc/grep.1: Likewise; state that wildcard matching is used.
	  Move some options so that they are sorted alphabetically.
	* dfa.c, NEWS: Fix typos.

2004-11-28  Benno Schulenberg  <benno@nietvergeten.nl>  (tiny change)

	* src/grep.c (usage): Clean up several details in the usage string.
	* doc/grep.1: Fix descriptions of --include and --exclude.
	* doc/grep.texi: Likewise.

2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* src/Makefile.am: The egrep and fgrep script now use their own
	path to construct the full pathname of grep.

2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* src/Makefile.am: Merged the rules for creating the egrep and
	fgrep script.

2004-11-23  Stepan Kasal  <kasal@ucw.cz>

	* src/grep.c (usage): Make sure both copies of the ``usage''
	  strings match.  Add ``(C)'' to the copyright notice.
	* src/dfa.c: Changed ``out of memory'' to ``memory exhausted'' to
	  match messages elsewhere in the source.

2004-11-22  Stepan Kasal  <kasal@ucw.cz>

	* src/search.c: Use mbsupport.h .